fs_config: add unit tests
Add some initial unit tests.

The unit tests themselves are inlined into the tool and
can be executed by running the "test" commandlet.

Example:
$ ./build/make/tools/fs_config/fs_config_generator.py test
.............
----------------------------------------------------------------------
Ran 13 tests in 0.005s

Test: run the test commandlet and observe for failures.

Change-Id: I1bada385fa841fd50fa958997d440f1198e15198
Signed-off-by: William Roberts <william.c.roberts@intel.com>

--- a/tools/fs_config/README
+++ b/tools/fs_config/README
@@ -131,3 +131,15 @@ the header.
   LOCAL_ADDITIONAL_DEPENDENCIES := $(oem_aid_file)
 
 Then in your C code just #include "generated_oem_aid.h" and start using the declared identifiers.
+
+Unit Tests:
+Unit tests are inlined into the fsconfig generator tool. To execute it, from the root of the source
+tree, do:
+
+$ ./build/make/tools/fs_config/fs_config_generator.py test
+    .............
+    ----------------------------------------------------------------------
+    Ran 13 tests in 0.005s
+
+To add new tests, simply add a test_<xxx> method to the test class. It will automatically
+get picked up and added to the test suite.
