--- a/tools/fs_config/README
+++ b/tools/fs_config/README
@@ -124,3 +124,15 @@ For OEMs wishing to use the define AIDs in their native code, one can access the
 file like so:
   1. In your C code just #include "generated_oem_aid.h" and start using the declared identifiers.
   2. In your Makefile add this static library like so: LOCAL_STATIC_LIBRARIES := liboemaids
+
+Unit Tests:
+Unit tests are inlined into the fsconfig generator tool. To execute it, from the root of the source
+tree, do:
+
+$ ./build/make/tools/fs_config/fs_config_generator.py test
+    .............
+    ----------------------------------------------------------------------
+    Ran 13 tests in 0.005s
+
+To add new tests, simply add a test_<xxx> method to the test class. It will automatically
+get picked up and added to the test suite.
